--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,65 @@
   border-radius: 3px;
   border: 1px solid #ccc;
 }
+.menu {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.menu li {
+  margin-right: 10px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #333;
+  padding: 5px 10px;
+  font-size: 16px;
+  border-radius: 3px;
+  background-color: #f5f5f5;
+}
+
+.menu a:hover {
+  background-color: #eaeaea;
+}
+.task-page {
+  margin-top: 20px;
+}
+
+.task {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.task-name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.task-description {
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+.task-check {
+  margin-right: 10px;
+}
+
+.task-check-label {
+  font-size: 16px;
+}
+
+.task-check-label.completed {
+  text-decoration: line-through;
+  color: #ccc;
+}
